--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
-file.reference.ojdbc7.jar=E:\\WBD\\OJDBC-Full\\ojdbc7.jar
-user.properties.file=C:\\Users\\DAWID\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.ojdbc7.jar=/home/micha/Pulpit
+user.properties.file=/home/micha/.netbeans/8.2/build.properties
