Konflikty należy skutecznie rozwiązywać xd

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,5 @@
 compile.on.save=true
-file.reference.ojdbc7.jar=/home/micha/NetBeansProjects
-user.properties.file=/home/micha/.netbeans/8.2/build.properties
+file.reference.ojdbc7.jar=E:\\WBD\\ProjectPart2\\ZKM_APP\\library_ojdb7\\ojdbc7.jar
+user.properties.file=C:\\Users\\DAWID\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
 
